--- a/OrderOfStars/Views/Shared/_Layout.cshtml
+++ b/OrderOfStars/Views/Shared/_Layout.cshtml
@@ -51,6 +51,7 @@
         <p>&copy; @DateTime.Now.Year – приложение ASP.NET</p>
     </footer>        
         @Scripts.Render("~/bundles/bootstrap")
+        @Scripts.Render("~/scripts/jquery.unobtrusive-ajax.min.js")
         @RenderSection("scripts", required: false)
 </body>
 </html>
