--- a/OrderOfStars/Views/StarCard/Index.cshtml
+++ b/OrderOfStars/Views/StarCard/Index.cshtml
@@ -22,9 +22,17 @@
 <div id="mainContent">
     <div id='fullStarCardName' data-bind="text:name"></div>
     <div id='fullStarCardDescription' data-bind="text:description"></div>
-
-    <div id="timePickerContainer">
-        <div class="datepicker-here myPicker"></div>
+    <div id="orderContainer">
+        <div id="datePickerContainer">
+            <p>Выберите дату:</p>
+            <br />
+            <div class="datepicker-here myPicker"></div>
+        </div>
+        <div id="timePickerContainer">
+            <p>Выберите время:</p>
+            <br />
+            <div>Тут будет выбор времени!!!</div>
+        </div>
     </div>
 </div>
 
