--- a/OrderOfStars/Content/Site.css
+++ b/OrderOfStars/Content/Site.css
@@ -1,6 +1,5 @@
 ﻿body {
     background-color: #F5F5F5;
-    padding-bottom: 20px;
 }
 /* Set padding to keep content from hitting the edges */
 /* Set width on the form input elements since they're 100% wide by default */
@@ -207,16 +206,42 @@ footer {
     width: 100%;
     border: 1px solid black;
 }
-#timePickerContainer {
-    float:left;
+
+#datePickerContainer > p {
     background-color: white;
-    border: 1px solid black;
     width: 100%;
-    margin-top:5px;
-    border-radius:6px;
+    padding: 10px;
+    border-radius: 4px;
+    text-align: center;
+    border-bottom: 1px solid black;
+    margin-bottom: 0px;
+}
+#datePickerContainer {
+    float: left;
+    margin-top: 5px;
+    width: 300px;
+    border-radius: 4px;
+    border: 1px solid black;
+}
+#timePickerContainer > p {
+    background-color: white;
+    width: 100%;
+    padding: 10px;
+    border-radius: 4px;
+    text-align: center;
+    border-bottom: 1px solid black;
+    margin-bottom: 0px;
+}
+#timePickerContainer {
+    margin-top: 5px;
+    float: left;
+    width:300px;
+    height:316px;
+    border-radius: 4px;
+    border: 1px solid black;
 }
 .myPicker {
-  
+    
 }
 .datepicker--nav {
     box-sizing: border-box;
@@ -226,7 +251,6 @@ footer {
     
     width:100%;
 }
-
 /*--------------------------------------------------*/
 .pageUpTitle {
     font-size: 25px;
@@ -256,6 +280,40 @@ footer {
     background-color:dimgrey;
     color:white;
 }
+/*Добавить роль пользователю*/
+#mainContent > form{
+    width:100%;
+}
+#userName {
+    cursor: pointer;
+    box-sizing: border-box;
+    margin-right: 10px;
+    width: calc(40% - 10px);
+    float: left;
+    height: 38px;
+    border-radius: 4px;
+}
+#roleName {
+    cursor:pointer;
+    box-sizing: border-box;
+    margin-right: 10px;
+    width: calc(40% - 10px);
+    float: left;
+    height: 38px;
+    border-radius: 4px;
+    
+}
+.addRoleBtn {
+    box-sizing: border-box;
+    width: 20%;
+    float: left;
+}
+#results {
+    margin-top:5px;
+    font-size:20px;
+}
+/*--------------------------*/
+
 
 
 
