--- a/OrderOfStars/Content/Site.css
+++ b/OrderOfStars/Content/Site.css
@@ -83,8 +83,8 @@
 #mainContent {
     display:block;
     box-sizing:border-box;
-    min-width: 700px;
-    max-width: 70%;
+    min-width: 400px;
+    max-width: 80%;
     min-height: 730px;
     margin: auto;
     margin-bottom:10px;
@@ -193,7 +193,6 @@ footer {
     border-radius: 4px;
     padding: 5px;
     width: 100%;
-    font-size: 20px;
     font-weight: 600;
     border: 1px solid black;
 }
@@ -206,50 +205,83 @@ footer {
     width: 100%;
     border: 1px solid black;
 }
+@media(min-width:0px) {
+    #orderContainer {
+        margin-top: 5px;
+        background-color: white;
+        border-radius: 4px;
+        text-align: center;
+        border: 1px solid black;
+        width: 100%;
+        float: left
+    }
 
-#datePickerContainer > p {
-    background-color: white;
-    width: 100%;
-    padding: 10px;
-    border-radius: 4px;
-    text-align: center;
-    border-bottom: 1px solid black;
-    margin-bottom: 0px;
+     #orderContainer * {
+        box-sizing: border-box;
+        width: calc(100% - 20px);
+        margin-top: 5px;
+        margin-bottom: 5px;
+        margin-left: 10px;
+        margin-right: 10px;
+        border-radius: 4px;
+      }
+
+    #orderTitle {
+        background-color: white;
+        width: 100%;
+        margin: 0px;
+        padding: 10px;
+        border-radius: 4px;
+        text-align: center;
+        border-bottom: 1px solid black;
+    }
+
 }
-#datePickerContainer {
-    float: left;
-    margin-top: 5px;
-    width: 300px;
-    border-radius: 4px;
-    border: 1px solid black;
+@media(min-width:1000px) {
+    #orderContainer div {
+        box-sizing: border-box;
+        width: calc(100% - 20px);
+        margin-top: 5px;
+        margin-bottom: 5px;
+        margin-left: 10px;
+        margin-right: 10px;
+        border-radius: 4px;
+    }
+    #orderContainer div>*{
+        box-sizing: border-box;
+        width: 46%;
+        height: 38px;
+        border-radius: 4px;
+    }
+    body {
+        font-size: 18px;
+    }
+    .titleText {
+        font-size: 23px;
+    }
+    #orderContainer div > * {
+        height: 43px;
+    }
+    .btn {
+        font-size: 18px;
+    }
 }
-#timePickerContainer > p {
-    background-color: white;
-    width: 100%;
-    padding: 10px;
-    border-radius: 4px;
-    text-align: center;
-    border-bottom: 1px solid black;
-    margin-bottom: 0px;
-}
-#timePickerContainer {
-    margin-top: 5px;
-    float: left;
-    width:300px;
-    height:316px;
-    border-radius: 4px;
-    border: 1px solid black;
-}
-.myPicker {
-    
-}
-.datepicker--nav {
-    box-sizing: border-box;
-    width: 100%;
-}
-.datepicker--days-names {
-    
-    width:100%;
+@media(min-width:1300px)
+{
+    body {
+        font-size: 20px;
+    }
+    .titleText {
+        font-size: 25px;
+    }
+    #orderContainer div>*{
+        height:45px;
+    }
+    .btn{
+        font-size:20px;
+    }
+   
+   
 }
 /*--------------------------------------------------*/
 .pageUpTitle {
