--- a/OrderOfStars/Content/Site.css
+++ b/OrderOfStars/Content/Site.css
@@ -173,13 +173,30 @@ footer {
     display: block;
     float: left;
 }
+
 .form-group{
     width:100%;
 }
-#customerForm {
-    width: 100%;
-    display: none;
-    float: left;
+.clearMarginAndPadding {
+    margin:0px;
+    padding:0px;
+}
+#addStarPrice {
+    padding:0px;
+    height: 38px;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    border: 0px;
+    width: calc(100% - 25px);
+}
+.rubIcon {
+    margin:0px;
+    height:38px;
+    padding-top: 7px;
+    text-align: center;
+    width: 25px;
+    background-color: lightgrey;
+   
 }
 #authorizationForm {
     width: 100%;
