--- a/OrderOfStars/Views/Admin/AdminPanel.cshtml
+++ b/OrderOfStars/Views/Admin/AdminPanel.cshtml
@@ -1,10 +1,8 @@
 ﻿<div class="pageUpTitle">Админка</div>
 
 <div class="adminButton" onclick="location.href='@Url.Action("CreateStar", "Admin")'">Добавить звезду</div>
-<div class="adminButton" onclick="location.href='@Url.Action("CreateStar", "Admin")'">Редактировать звезду</div>
-<div class="adminButton" onclick="location.href='@Url.Action("CreateStar", "Admin")'">Удалить звезду</div>
 <div class="adminButton" onclick="location.href='@Url.Action("UsersAndRoles", "Admin")'">Назначить пользователю роль</div>
 <div class="adminButton" onclick="location.href='@Url.Action("Create", "Roles")'">Добавить роль</div>
 <div class="adminButton" onclick="location.href='@Url.Action("Index", "Roles")'">Список всех ролей</div>
-<div class="adminButton" onclick="location.href='@Url.Action("Login", "Account")'">Удалить пользователя</div>
+<div class="adminButton" onclick="location.href='@Url.Action("Orders", "Admin")'">Заказы</div>
 
