--- a/OrderOfStars/Content/Site.css
+++ b/OrderOfStars/Content/Site.css
@@ -3,41 +3,131 @@
 }
 /* Set padding to keep content from hitting the edges */
 /* Set width on the form input elements since they're 100% wide by default */
-#header {
-    background-color: darkorange;
-    width: 100%;
-    min-width: 800px;
-    height: 75px;
-    border-bottom: 1px black solid;   
+@media(min-width:0px)
+{
+    #header {
+        background-color: darkorange;
+        width: 100%;
+        min-width: 400px;
+        height: 75px;
+        border-bottom: 1px black solid;
+    }
+    .logo {
+        background-image: url("Images/logo.png");
+        background-size: cover;
+        background-repeat: no-repeat;
+        margin: 5px;
+        width:300px;
+        height:65px;
+        float: left;
+    }
+    .headerMenu {
+        border-left:1px solid black;
+        text-align:center;
+        font-size:18px;
+        padding-top:20px;
+        cursor:pointer;
+        height: 100%;
+        width: 70px;
+        float: right;
+    }
+
+    .headerMenu:hover{
+        background-color:orange;
+    }
+    .headerUserName {
+        display:none;
+    }
+   
 }
-.logo {
-    margin-top:5px;
-    margin-left:5px;
-    float: left;
-    width: 360px;
-    height: 62px;
-    background-image: url("Images/logo.png");
+
+@media(min-width:500px) {
+    .headerMenu{
+        display:none;
+    }
+    #header {
+        background-color: darkorange;
+        width: 100%;
+        min-width: 400px;
+        height: 75px;
+        border-bottom: 1px black solid;
+    }
+
+    .logo {
+        background-size:auto;
+        display: block;
+        margin-top: 5px;
+        margin-left: 5px;
+        float: left;
+        width: 360px;
+        height: 62px;
+        background-image: url("Images/logo.png");
+    }
+
+    .headerUserName {
+        box-sizing: border-box;
+        padding-top:15px;
+        padding-left:5px;
+        font-size: 20px;
+        width:23%;
+        float: right;
+        height: 100%;
+        border-left: 1px solid black;
+    }
+    .dropdownHover {
+        width: 23%;
+        position: relative;
+        display: inline-block;
+    }
+    .headerHoverText {
+        width: 100%;
+        height: 100%;
+    }
+}
+
+@media(min-width:700px) {
+    .headerMenu {
+        display: none;
+    }
+    #header {
+        background-color: darkorange;
+        width: 100%;
+        min-width: 400px;
+        height: 75px;
+        border-bottom: 1px black solid;
+    }
+    .logo {
+        display:block;
+        margin-top: 5px;
+        margin-left: 5px;
+        float: left;
+        width: 360px;
+        height: 62px;
+        background-image: url("Images/logo.png");
+    }
+    .headerUserName {
+        box-sizing: border-box;
+        padding: 15px;
+        font-size: 25px;
+        float: right;
+        height: 100%;
+        border-left: 1px solid black;
+    }
+    .dropdownHover {
+        width: 300px;
+        position: relative;
+        display: inline-block;
+    }
 }
 .logo:hover {
     cursor:pointer;
 }
-.headerUserName {
-    box-sizing: border-box;
-    padding: 15px;
-    font-size: 25px;
-    float: right;
-    height: 100%;
-    border-left: 1px solid black;
-}
+
 .headerUserName:hover {
     background-color: orange;
     cursor: pointer;
 }
-.dropdownHover {
-    width:300px;
-    position: relative;
-    display: inline-block;
-}
+
 .dropdownHover-content {
     display: none;
     top: 74px;
@@ -63,10 +153,7 @@
 .dropdownHover:hover .dropdownHover-content {
     display: block;
 }
-.headerHoverText{
-    width:100%;
-    height:100%;
-}
+
 #headerBtnContainer {
     padding: 15px;
     float: right;
@@ -80,6 +167,7 @@
 #header > button:hover {
     cursor: pointer;
 }
+/*----------------------------------------------*/
 #mainContent {
     display:block;
     box-sizing:border-box;
@@ -96,33 +184,113 @@
 #mainContent * {
      float: left;
 }
-.starCard {
-    border-radius: 6px;
-    margin-bottom: 10px;
-    width: 100%;
-    height: 200px;
-    background-color: white;
-    border: 1px solid black;
-    padding: 10px;
+@media(min-width:0px) {
+    .starCard {
+        border-radius: 6px;
+        margin-bottom: 10px;
+        width: 100%;
+        height: 450px;
+        background-color: white;
+        border: 1px solid black;
+        padding: 10px;
+    }
+    .starImg {
+        width: 100%;
+        height: 300px;
+        border: 1px solid lightgrey;
+        border-radius: 6px;
+        content: url("Images/noAva.png");
+    }
+    .starName {
+        margin-top:5px;
+        text-align:center;
+        font-size: 18px;
+        font-weight: 600;
+        margin-bottom:0px;
+        width: 100%;
+    }
+
+    .starDescription {
+        overflow: hidden;
+        text-overflow:ellipsis;
+        text-align: center;
+        padding: 5px;
+        width: 100%;
+        height:80px;
+        word-wrap: break-word;
+    }
 }
-.starImg {
-    width: 150px;
-    height: 100%;
-    border: 1px solid lightgrey;
-    border-radius: 6px;
-    content: url("Images/noAva.png");
+@media(min-width:500px) {
+    .starCard {
+        border-radius: 6px;
+        margin-bottom: 10px;
+        width: 100%;
+        height: 200px;
+        background-color: white;
+        border: 1px solid black;
+        padding: 10px;
+    }
+
+    .starImg {
+        width: 150px;
+        height: 100%;
+        border: 1px solid lightgrey;
+        border-radius: 6px;
+        content: url("Images/noAva.png");
+    }
+
+    .starName {
+        text-align: left;
+        font-size: 18px;
+        font-weight: 600;
+        margin-bottom: 0px;
+        width: calc(100% - 150px);
+        padding-left: 10px;
+    }
+
+    .starDescription {
+        text-align: left;
+        height: 110px;
+        padding: 10px;
+        width: calc(100% - 150px);
+        word-wrap: break-word;
+    }
 }
-.starName {
-    font-size: 18px;
-    font-weight: 600;
-    width: calc(100% - 150px);
-    padding-left: 10px;
+
+@media(min-width:1000px) {
+    .starCard {
+        border-radius: 6px;
+        margin-bottom: 10px;
+        width: 100%;
+        height: 200px;
+        background-color: white;
+        border: 1px solid black;
+        padding: 10px;
+    }
+
+    .starImg {
+        width: 150px;
+        height: 100%;
+        border: 1px solid lightgrey;
+        border-radius: 6px;
+        content: url("Images/noAva.png");
+    }
+    .starName {
+        font-size: 18px;
+        font-weight: 600;
+        width: calc(100% - 150px);
+        padding-left: 10px;
+    }
+
+    .starDescription {
+        padding: 10px;
+        width: calc(100% - 150px);
+        word-wrap: break-word;
+    }
 }
-.starDescription {
-    padding: 10px;
-    width: calc(100% - 150px);
-    word-wrap: break-word;
-}
+
+
+
 .starCard:hover {
     cursor: pointer;
     background-color: rgba(255, 140, 0, 0.01);
@@ -382,7 +550,15 @@ footer {
     font-size:20px;
 }
 /*--------------------------*/
-
+.orderCard{
+    background-color:white;
+    border:1px solid black;
+    border-radius:4px;
+    margin:5px;
+}
+.orderCard>div{
+    width:100%;
+}
 
 
 
