--- a/OrderOfStars/Views/Home/Index.cshtml
+++ b/OrderOfStars/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 </div>
 <script>
     function myFunction(index) {
-        var url = "StarCard/Index/" + index;
+        var url = "../StarCard/Index/" + index;
         window.location.href = url;
     };
 
