--- a/OrderOfStars/Content/Site.css
+++ b/OrderOfStars/Content/Site.css
@@ -1,140 +1,36 @@
 ﻿body {
     background-color: #F5F5F5;
 }
-/* Set padding to keep content from hitting the edges */
-/* Set width on the form input elements since they're 100% wide by default */
-@media(min-width:0px)
-{
-    #header {
-        background-color: darkorange;
-        width: 100%;
-        min-width: 400px;
-        height: 75px;
-        border-bottom: 1px black solid;
-    }
-    .logo {
-        background-image: url("Images/logo.png");
-        background-size: cover;
-        background-repeat: no-repeat;
-        margin: 5px;
-        width:300px;
-        height:65px;
-        float: left;
-    }
-    .headerMenu {
-        border-left:1px solid black;
-        text-align:center;
-        font-size:18px;
-        padding-top:20px;
-        cursor:pointer;
-        height: 100%;
-        width: 70px;
-        float: right;
-    }
 
-    .headerMenu:hover{
-        background-color:orange;
-    }
-    .headerUserName {
-        display:none;
-    }
-   
-}
-
-@media(min-width:500px) {
-    .headerMenu{
-        display:none;
-    }
-    #header {
-        background-color: darkorange;
-        width: 100%;
-        min-width: 400px;
-        height: 75px;
-        border-bottom: 1px black solid;
-    }
-
-    .logo {
-        background-size:auto;
-        display: block;
-        margin-top: 5px;
-        margin-left: 5px;
-        float: left;
-        width: 360px;
-        height: 62px;
-        background-image: url("Images/logo.png");
-    }
-
-    .headerUserName {
-        box-sizing: border-box;
-        padding-top:15px;
-        padding-left:5px;
-        font-size: 20px;
-        width:23%;
-        float: right;
-        height: 100%;
-        border-left: 1px solid black;
-    }
-    .dropdownHover {
-        width: 23%;
-        position: relative;
-        display: inline-block;
-    }
-    .headerHoverText {
-        width: 100%;
-        height: 100%;
-    }
-}
-
-@media(min-width:700px) {
-    .headerMenu {
-        display: none;
-    }
-    #header {
-        background-color: darkorange;
-        width: 100%;
-        min-width: 400px;
-        height: 75px;
-        border-bottom: 1px black solid;
-    }
-    .logo {
-        display:block;
-        margin-top: 5px;
-        margin-left: 5px;
-        float: left;
-        width: 360px;
-        height: 62px;
-        background-image: url("Images/logo.png");
-    }
-    .headerUserName {
-        box-sizing: border-box;
-        padding: 15px;
-        font-size: 25px;
-        float: right;
-        height: 100%;
-        border-left: 1px solid black;
-    }
-    .dropdownHover {
-        width: 300px;
-        position: relative;
-        display: inline-block;
-    }
+.logo {
+    background-size: auto;
+    display: block;
+    margin-top: 5px;
+    margin-left: 5px;
+    float: left;
+    width: 360px;
+    height: 62px;
+    background-repeat: no-repeat;
+    background-image: url("/Content/Images/logo.png");
 }
 .logo:hover {
-    cursor:pointer;
+    cursor: pointer;
 }
-
-.headerUserName:hover {
+.headerHoverText:hover {
     background-color: orange;
     cursor: pointer;
 }
-
+.dropdownHover {
+    height: 100%;
+}
 .dropdownHover-content {
+    box-sizing:border-box;
     display: none;
     top: 74px;
     right:0px;
     position: absolute;
     background-color: #f9f9f9;
-    width: calc(100% + 1px);
+    width:100%;
     border-left: 1px solid black;
     border-bottom:1px solid black;
     background-color:orange;
@@ -142,6 +38,7 @@
     z-index: 1;
 }
 .dropdownHover-content>div{
+    cursor:pointer;
    border-top:1px solid grey;
    padding:3px;
    font-size:23px;
@@ -153,7 +50,6 @@
 .dropdownHover:hover .dropdownHover-content {
     display: block;
 }
-
 #headerBtnContainer {
     padding: 15px;
     float: right;
@@ -172,8 +68,8 @@
     display:block;
     box-sizing:border-box;
     min-width: 400px;
-    max-width: 80%;
-    min-height: 730px;
+    width:80%;
+    max-width: 1200px;
     margin: auto;
     margin-bottom:10px;
     padding:40px;
@@ -184,113 +80,6 @@
 #mainContent * {
      float: left;
 }
-@media(min-width:0px) {
-    .starCard {
-        border-radius: 6px;
-        margin-bottom: 10px;
-        width: 100%;
-        height: 450px;
-        background-color: white;
-        border: 1px solid black;
-        padding: 10px;
-    }
-    .starImg {
-        width: 100%;
-        height: 300px;
-        border: 1px solid lightgrey;
-        border-radius: 6px;
-        content: url("Images/noAva.png");
-    }
-    .starName {
-        margin-top:5px;
-        text-align:center;
-        font-size: 18px;
-        font-weight: 600;
-        margin-bottom:0px;
-        width: 100%;
-    }
-
-    .starDescription {
-        overflow: hidden;
-        text-overflow:ellipsis;
-        text-align: center;
-        padding: 5px;
-        width: 100%;
-        height:80px;
-        word-wrap: break-word;
-    }
-}
-@media(min-width:500px) {
-    .starCard {
-        border-radius: 6px;
-        margin-bottom: 10px;
-        width: 100%;
-        height: 200px;
-        background-color: white;
-        border: 1px solid black;
-        padding: 10px;
-    }
-
-    .starImg {
-        width: 150px;
-        height: 100%;
-        border: 1px solid lightgrey;
-        border-radius: 6px;
-        content: url("Images/noAva.png");
-    }
-
-    .starName {
-        text-align: left;
-        font-size: 18px;
-        font-weight: 600;
-        margin-bottom: 0px;
-        width: calc(100% - 150px);
-        padding-left: 10px;
-    }
-
-    .starDescription {
-        text-align: left;
-        height: 110px;
-        padding: 10px;
-        width: calc(100% - 150px);
-        word-wrap: break-word;
-    }
-}
-
-@media(min-width:1000px) {
-    .starCard {
-        border-radius: 6px;
-        margin-bottom: 10px;
-        width: 100%;
-        height: 200px;
-        background-color: white;
-        border: 1px solid black;
-        padding: 10px;
-    }
-
-    .starImg {
-        width: 150px;
-        height: 100%;
-        border: 1px solid lightgrey;
-        border-radius: 6px;
-        content: url("Images/noAva.png");
-    }
-    .starName {
-        font-size: 18px;
-        font-weight: 600;
-        width: calc(100% - 150px);
-        padding-left: 10px;
-    }
-
-    .starDescription {
-        padding: 10px;
-        width: calc(100% - 150px);
-        word-wrap: break-word;
-    }
-}
-
-
-
 .starCard:hover {
     cursor: pointer;
     background-color: rgba(255, 140, 0, 0.01);
@@ -409,84 +198,6 @@ footer {
     text-align: center;
     width: calc(50% + 1px);
     float: right;
-}
-@media(min-width:0px) {
-    #orderContainer {
-        margin-top: 5px;
-        background-color: white;
-        border-radius: 4px;
-        text-align: center;
-        border: 1px solid black;
-        width: 100%;
-        float: left
-    }
-
-     #orderContainer * {
-        box-sizing: border-box;
-        width: calc(100% - 20px);
-        margin-top: 5px;
-        margin-bottom: 5px;
-        margin-left: 10px;
-        margin-right: 10px;
-        border-radius: 4px;
-      }
-
-    #orderTitle {
-        background-color: white;
-        width: 100%;
-        margin: 0px;
-        padding: 10px;
-        border-radius: 4px;
-        text-align: center;
-        border-bottom: 1px solid black;
-    }
-
-}
-@media(min-width:1000px) {
-    #orderContainer div {
-        box-sizing: border-box;
-        width: calc(100% - 20px);
-        margin-top: 5px;
-        margin-bottom: 5px;
-        margin-left: 10px;
-        margin-right: 10px;
-        border-radius: 4px;
-    }
-    #orderContainer div>*{
-        box-sizing: border-box;
-        width: 46%;
-        height: 38px;
-        border-radius: 4px;
-    }
-    body {
-        font-size: 18px;
-    }
-    .titleText {
-        font-size: 23px;
-    }
-    #orderContainer div > * {
-        height: 43px;
-    }
-    .btn {
-        font-size: 18px;
-    }
-}
-@media(min-width:1300px)
-{
-    body {
-        font-size: 20px;
-    }
-    .titleText {
-        font-size: 25px;
-    }
-    #orderContainer div>*{
-        height:45px;
-    }
-    .btn{
-        font-size:20px;
-    }
-   
-   
 }
 /*--------------------------------------------------*/
 .pageUpTitle {
