--- a/OrderOfStars/Views/Admin/AdminPanel.cshtml
+++ b/OrderOfStars/Views/Admin/AdminPanel.cshtml
@@ -1,8 +1,9 @@
-﻿<div class="pageUpTitle">Админка</div>
+﻿<div id="mainContent">
+    <div class="pageUpTitle">Админка</div>
 
-<div class="adminButton" onclick="location.href='@Url.Action("CreateStar", "Admin")'">Добавить звезду</div>
-<div class="adminButton" onclick="location.href='@Url.Action("UsersAndRoles", "Admin")'">Назначить пользователю роль</div>
-<div class="adminButton" onclick="location.href='@Url.Action("Create", "Roles")'">Добавить роль</div>
-<div class="adminButton" onclick="location.href='@Url.Action("Index", "Roles")'">Список всех ролей</div>
-<div class="adminButton" onclick="location.href='@Url.Action("Orders", "Admin")'">Заказы</div>
-
+    <div class="adminButton" onclick="location.href='@Url.Action("CreateStar", "Admin")'">Добавить звезду</div>
+    <div class="adminButton" onclick="location.href='@Url.Action("UsersAndRoles", "Admin")'">Назначить пользователю роль</div>
+    <div class="adminButton" onclick="location.href='@Url.Action("Create", "Roles")'">Добавить роль</div>
+    <div class="adminButton" onclick="location.href='@Url.Action("Index", "Roles")'">Список всех ролей</div>
+    <div class="adminButton" onclick="location.href='@Url.Action("Orders", "Admin")'">Заказы</div>
+</div>
