--- a/OrderOfStars/Views/Shared/_Layout.cshtml
+++ b/OrderOfStars/Views/Shared/_Layout.cshtml
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="~/Content/Media.css" />
+
 </head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <body>
@@ -26,8 +28,9 @@
         @{
             if (User.Identity.IsAuthenticated)
             {
-                <div class="headerMenu" >Меню</div>
-                <div class="dropdownHover headerUserName">
+                
+                <div class="dropdownHover">
+                    <div class="headerMenu">Меню</div>
                     <div class="headerHoverText">@User.Identity.Name</div>
                     <div class="dropdownHover-content dropDownMenuContent" aria-labelledby="dropdownMenuButton">
                         <div>Личный кабинет</div>
@@ -49,16 +52,13 @@
             }
         }
     </div>
-    
         @RenderBody()
-        
-        
     <hr />
     <footer>
         <p>&copy; @DateTime.Now.Year – приложение ASP.NET</p>
     </footer>        
-        @Scripts.Render("~/bundles/bootstrap")
-        @Scripts.Render("~/scripts/jquery.unobtrusive-ajax.min.js")
-        @RenderSection("scripts", required: false)
+    @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/scripts/jquery.unobtrusive-ajax.min.js")
+    @RenderSection("scripts", required: false)
 </body>
 </html>
