--- a/OrderOfStars/Content/Media.css
+++ b/OrderOfStars/Content/Media.css
@@ -1,9 +1,10 @@
 ﻿/*----------Начало Шапки----------*/
+
 @media(min-width:0px) {
     #header {
         background-color: darkorange;
         width: 100%;
-        min-width: 400px;
+        min-width: 355px;
         height: 75px;
         border-bottom: 1px black solid;
     }
@@ -12,7 +13,9 @@
         width:280px;
         background-image: url("/Content/Images/logo-min.png");
     }
-
+    #headerBtnContainer {
+    display:none;
+    }
     .headerMenu {
         border-left: 1px solid black;
         text-align: center;
@@ -36,7 +39,8 @@
     }
 }
 
-@media(min-width:500px) {
+@media(min-width:640px) {
+    
     .headerMenu {
         display: none;
     }
@@ -60,6 +64,9 @@
         height: 75px;
         border-bottom: 1px black solid;
     }
+    #headerBtnContainer {
+        display: block;
+    }
 
     .headerHoverText {
         display: block;
@@ -67,19 +74,20 @@
         padding-top: 15px;
         padding-left: 5px;
         font-size: 20px;
-        width: 23%;
         height: 100%;
         text-overflow: ellipsis;
         overflow: hidden;
         border-left: 1px solid black;
     }
+
     .dropdownHover-content {
         position: fixed;
         width: 100%;
         border-left: 0px;
     }
+    
     .dropdownHover {
-        width:22%;
+        width:30%;
         box-sizing: border-box;
         min-width: 100px;
         max-width:300px;
@@ -87,6 +95,9 @@
         float: right;
         display: inline-block;
     }
+        .dropdownHover.dropdownBtnHower {
+            display: none;
+        }
 
     .headerHoverText {
         width: 100%;
@@ -146,7 +157,6 @@
         height: 300px;
         border: 1px solid lightgrey;
         border-radius: 6px;
-        content: url("Images/noAva.png");
     }
 
     .starName {
@@ -185,7 +195,7 @@
         height: 100%;
         border: 1px solid lightgrey;
         border-radius: 6px;
-        content: url("Images/noAva.png");
+        
     }
 
     .starName {
@@ -222,7 +232,7 @@
         height: 100%;
         border: 1px solid lightgrey;
         border-radius: 6px;
-        content: url("Images/noAva.png");
+        
     }
     .starName {
         font-size: 18px;
