--- a/OrderOfStars/Content/Site.css
+++ b/OrderOfStars/Content/Site.css
@@ -107,8 +107,10 @@ footer {
     display:none;
 }
 .chBtn {
-    margin-right:100%;
-    margin-bottom:1px;
+    margin-right: 100%;
+    margin-bottom: 1px;
+    -moz-border-radius: 8px;
+    -webkit-border-radius: 8px;
     border-radius: 8px;
     min-width: 200px;
     width: 300px;
@@ -124,6 +126,7 @@ footer {
     margin: auto;
     float: left;
 }
+/*Добавление звезды*/
 #starForm {
     visibility: visible;
     width: 100%;
@@ -139,9 +142,11 @@ footer {
     padding:0px;
 }
 #addStarPrice {
-    padding:0px;
+    padding: 0px;
     height: 38px;
+    -webkit-border-top-right-radius: 4px;
     border-top-right-radius: 4px;
+    -webkit-border-bottom-right-radius: 4px;
     border-bottom-right-radius: 4px;
     border: 0px;
     width: calc(100% - 25px);
@@ -161,9 +166,12 @@ footer {
 .myBtn:hover{
     cursor:pointer;
 }
+#fileNameHiddenSpan {
+    display:none;
+}
 /*-------Страница заказа звезды-----------------*/
 #fullStarCardName {
-    background-color:white;
+    background-color: white;
     border-radius: 4px;
     padding: 5px;
     width: 100%;
