--- a/OrderOfStars/Views/Shared/_Layout.cshtml
+++ b/OrderOfStars/Views/Shared/_Layout.cshtml
@@ -8,8 +8,9 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/knockout/knockout-3.3.0.js"></script>
+    <script type="text/javascript" src="~/Scripts/knockout.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <script src="https://npmcdn.com/flatpickr/dist/flatpickr.min.js"></script>
     <script src="https://npmcdn.com/flatpickr/dist/l10n/ru.js"></script>
@@ -17,7 +18,6 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="~/Content/Media.css" />
-
 </head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <body>
@@ -49,6 +49,14 @@
                     <button class="btn btn-outline-dark myBtn" onclick="location.href='@Url.Action("Login", "Account")'">Авторизация</button>
                     <button class="btn btn-outline-dark myBtn" onclick="location.href='@Url.Action("Register", "Account")'">Регистрация</button>
                 </div>
+             <div class="dropdownHover dropdownBtnHower">
+               <div class="headerMenu">Меню</div>
+                 <div class="dropdownHover-content dropDownMenuContent" aria-labelledby="dropdownMenuButton">
+                     <div onclick="location.href='@Url.Action("Login", "Account")'">Авторизация</div>
+                     <div onclick="location.href='@Url.Action("Register", "Account")'">Регистрация</div>
+                     
+                 </div>
+               </div>
             }
         }
     </div>
